# math-tool

./: .gitignore  README.md  canvas.md  ib.md
backend/: .env.example  Cargo.toml
backend/prompts/: ocr.txt  question_generation.txt
backend/prompts/chemistry/: question_generation.txt
backend/prompts/math/: question_generation.txt
backend/prompts/math_aa/: question_generation.txt
backend/prompts/math_ai/: question_generation.txt
backend/prompts/physics/: question_generation.txt
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  queries.rs
backend/src/models/: mod.rs  progress.rs  question.rs  quiz.rs
backend/src/routes/: mod.rs  ocr.rs  progress.rs  question.rs  quiz.rs  solve.rs
backend/src/services/: adaptive.rs  gemini.rs  mod.rs  prompt_loader.rs  python_client.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md
frontend/: README.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  progress.tsx  quiz.tsx  settings.tsx  upload.tsx  write.tsx
frontend/components/canvas/: CanvasControls.tsx  DrawingCanvas.tsx  ToolPalette.tsx
frontend/components/input/: CanvasToolbar.tsx  DrawingCanvas.tsx  HandwritingInput.tsx  ImageCapture.tsx
frontend/constants/: api.ts  topics.ts
frontend/hooks/: use-color-scheme.ts  use-color-scheme.web.ts  use-ocr.ts
frontend/services/: api.ts
frontend/stores/: canvas-store.ts  progress-store.ts  quiz-store.ts  settings-store.ts
frontend/types/: index.ts  react-native-math-view.d.ts
frontend/utils/: quiz-name-generator.ts
python-service/: main.py  pyproject.toml
python-service/app/: __init__.py  config.py
python-service/app/routes/: __init__.py  ocr.py  solve.py
python-service/app/services/: __init__.py  ocr_service.py  solver_service.py
(+8 files in other folders)
