[project]
name = "ib-quiz-python-service"
version = "0.1.0"
description = "Math solver microservice for IB Quiz App"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sympy>=1.13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "antlr4-python3-runtime==4.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
